--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <P5>
         <h1><p id= "smates">Smates</h1>
         <P>Bart Smeets, better known in art world as Smates, is a Belgian street artist who was born 1978 in Asse(close to Brussels). He studied graphic design at Sint-Lukas Brussels and graduated as a graphic designer. Bart has always been a fan of realistic drawings and paintings so after graduating he followed painting classes for about 2 years and that helped him a lot to become artist he is today.</P>
-        <div class="column"> <image src = "image/Giantdog.jpg" id = "dog"></image><P> Giant Underwater Dog - Belgium, Germany</p></div>
+        <div class="column"> <image src = "image/giantdog.jpg" id = "dog"></image><P> Giant Underwater Dog - Belgium, Germany</p></div>
             <!-- https://www.thisiscolossal.com/2014/08/giant-underwater-dog-mural-in-the-streets-of-belgium-by-smates/ -->
             <div class="column"> <image src = "image/Moscow.jpg"id = "moscow"></image><P> Underwater Portrait - Moscow, Russia</p></div>
                 <!-- https://streetartnews.net/2014/11/smates-creates-new-piece-on-streets-of.html -->
